# COMP575_F2017

TestPID/: PIDController.cpp  PIDController.h  PIDError.cpp  PIDError.h  Pose.h.gch  RotationalController.cpp  RotationalController.h  RotationalError.cpp  RotationalError.h  Saturation.h.gch  TestMain.cpp  TranslationalController.cpp  TranslationalController.h  TranslationalError.cpp  TranslationalError.h  a.out  test_output.txt
src/mobility/: CMakeLists.txt
src/mobility/src/: PIDController.cpp  PIDController.h  PIDError.cpp  PIDError.h  RotationalController.cpp  RotationalController.h  RotationalError.cpp  RotationalError.h  Saturation.cpp  Saturation.h  SearchController.cpp  SearchController.h  TargetController.cpp  TargetController.h  TargetState.cpp  TargetState.h  ThetaError.cpp  ThetaError.h  TranslationalController.cpp  TranslationalController.h  TranslationalError.cpp  TranslationalError.h  WaypointController.h  mobility.cpp
src/target_detection/src/: target.cpp
